[metadata]
name = gym_md
version = attr: gym_md.__version__
description = OpenAI Gym Environment for MiniDungeons
url = https://github.com/Ganariya/gym-md
author = ganariya
author_email = ganariya2525@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
install_requires =
    gym
    matplotlib
packages = find:
zip_safe = False
