[metadata]
name = gym_md
version = attr: gym_md.__version__
description = OpenAI Gym Environment for MiniDungeons
url = https://github.com/ganyariya/gym-md
author = "ganyariya, LJArendse"
author_email = ganariya2525@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Natural Language :: Japanese
    Natural Language :: English
project_urls =
    Bug Tracker = https://github.com/ganyariya/gym-md/issues
    Documentation = https://github.com/ganyariya/gym-md/blob/main/README.md
    Source Code = https://github.com/ganyariya/gym-md

[options]
include_package_data = True
install_requires =
    gym==0.24.1
    matplotlib==3.5.2
    pydantic==1.9.1
packages = find:
zip_safe = False

[options.package_data]
# This section may be required when packaging gym-md on MacOS. It appears that the MAINIFEST.in file
# is ignored, resulting in the .json, .txt, and .png assets missing from the final .whl file.
# Source for options.package_data:
# https://jwodder.github.io/kbits/posts/pypkg-data/#including-package-data-via-setup-py-setup-cfg.
gym_md = envs/props/*.json, envs/stages/*.txt, envs/tiles/*.png